--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".screen.GifActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".screen.GifActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
